--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,9 +4,23 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<title>Todos App with NodeJS, Express, MongoDB</title>
 	</head>
 	<body>
 		<h1>Todos</h1>
+		<ul>
+			<% for(let i = 0; i < zebra.length; i++) { %>
+			<li class="todoItem">
+				<% if(todoItem[i].completed === true) {%><span class="completed"
+					><%= zebra[i].todo %></span
+				><% } else { %>
+				<span><%= zebra[i].todo %></span>
+				<% } %>
+				<span class="del"> Delete </span>
+			</li>
+			<% } %>
+		</ul>
+
+		<h2>Things left to do: <%= left %></h2>
 	</body>
 </html>
