--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,31 +4,10 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Todos App with NodeJS, Express, MongoDB</title>
-		<link rel="stylesheet" href="css/style.css" />
+		<title>Document</title>
 	</head>
 	<body>
-		<h1>Todos</h1>
-		<ul>
-			<% for(let i = 0; i < zebra.length; i++) { %>
-			<li class="todoItem">
-				<% if(zebra[i].completed === true) {%>
-				<span class="completed"><%= zebra[i].todo %></span>
-				<% } else { %>
-				<span><%= zebra[i].todo %></span>
-				<% } %>
-				<span class="del"> Delete </span>
-			</li>
-			<% } %>
-		</ul>
-
-		<h2>Things left to do: <%= left %></h2>
-
-		<form action="/createTodo" method="POST" { }>
-			<input type="text" placeholder="Enter Todo Item" name="todoItem" />
-			<input type="submit" />
-		</form>
-
-		<script src="js/main.js"></script>
+		<h1>Create A Todo List By Clicking The Button Below</h1>
+		<a href="/todos"> New Todo List</a>
 	</body>
 </html>
