--- a/views/todos.ejs
+++ b/views/todos.ejs
@@ -25,6 +25,7 @@
         <input type="submit">
     </form>
 
+    <a href="../auth/logout">Logout</a>
     <script src="js/main.js"></script>
 </body>
 </html>
