--- a/views/index.ejs
+++ b/views/index.ejs
@@ -46,9 +46,16 @@
 			</div>
 		</nav>
 
-		<ul class="sidenav" id="mobile-demo">
-			<li><a href="/auth/login">Login</a></li>
-		</ul>
+		<aside>
+			<ul class="sidenav" id="mobile-demo">
+				<li>
+					<a href="/auth/login" class="brand-logo"
+						><i class="large material-icons event-note">event_note</i></a
+					>
+				</li>
+				<li id="aside-login"><a href="/auth/login">Login</a></li>
+			</ul>
+		</aside>
 
 		<main>
 			<section id="home">
