--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,25 +3,25 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<!--Import Google Icon Font-->
-		<link
-			href="https://fonts.googleapis.com/icon?family=Material+Icons"
-			rel="stylesheet"
-		/>
-		<!-- Compiled and minified CSS -->
-		<link
-			rel="stylesheet"
-			href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
-		/>
 
-		<!-- Compiled and minified JavaScript -->
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+		<!-- Bootstrap CSS -->
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"
+			crossorigin="anonymous"
+		/>
+		<!-- Bootstrap Icon -->
+		<link
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
+		/>
 
 		<!-- Google Font -->
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
-			href="https://fonts.googleapis.com/css2?family=Caveat:wght@700&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Caveat:wght@700&family=Work+Sans:wght@200;300&display=swap"
 			rel="stylesheet"
 		/>
 
@@ -32,70 +32,73 @@
 		<title>Today List Plan App | Node.js, Express.js, MongoDB, Passport</title>
 	</head>
 	<body>
-		<nav class="teal">
-			<div class="nav-wrapper container">
-				<a href="/auth/login" class="brand-logo"
-					><i class="large material-icons event-note">event_note</i></a
+		<nav class="navbar navbar-expand-lg navbar-light bg-teal">
+			<div class="container-fluid">
+				<a class="navbar-brand" href="/auth/login"
+					><i class="bi bi-card-list"></i
+				></a>
+				<button
+					class="navbar-toggler"
+					type="button"
+					data-bs-toggle="collapse"
+					data-bs-target="#navbarNav"
+					aria-controls="navbarNav"
+					aria-expanded="false"
+					aria-label="Toggle navigation"
 				>
-				<a href="/auth/login" data-target="mobile-demo" class="sidenav-trigger"
-					><i class="material-icons">menu</i></a
-				>
-				<ul class="right hide-on-med-and-down">
-					<li><a href="/auth/login">Login</a></li>
-				</ul>
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarNav">
+					<ul class="navbar-nav">
+						<li class="nav-item active-button">
+							<a class="nav-link active" aria-current="page" href="/auth/login"
+								>Login</a
+							>
+						</li>
+					</ul>
+				</div>
 			</div>
 		</nav>
 
-		<aside>
-			<ul class="sidenav" id="mobile-demo">
-				<li>
-					<a href="/auth/login" class="brand-logo"
-						><i class="large material-icons event-note">event_note</i></a
-					>
-				</li>
-				<li id="aside-login"><a href="/auth/login">Login</a></li>
-			</ul>
-		</aside>
-
-		<main>
-			<section id="home">
-				<div class="container">
-					<div class="section">
-						<div class="row">
-							<div class="col s12 center">
-								<h1 class="header center teal-text text-lighten-2">
-									Welcome to the Today List Plan App!
-								</h1>
-							</div>
-						</div>
+		<main id="home">
+			<div class="container">
+				<div class="row">
+					<div class="col-12 text-center">
+						<header>
+							<h1>Welcome to the Today List Plan App!</h1>
+						</header>
 					</div>
 				</div>
-			</section>
+			</div>
 		</main>
 
-		<footer class="page-footer teal">
-			<div class="footer-copyright">
-				<div class="container center">
-					<p>
-						&copy;
-						<span id="year"></span>
-						All rights reserved --
-						<a
-							class="black-text text-lighten-3"
-							hre="https://krittiya-clark.netlify.app"
-							>Krittiya Clark</a
-						>
-					</p>
+		<footer class="bg-teal">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-6 offset-md-3">
+						<p class="text-center">
+							&copy;
+							<span id="year"></span>
+							All rights reserved --
+							<a
+								class="black-text text-lighten-3"
+								hre="https://krittiya-clark.netlify.app"
+								>Krittiya Clark</a
+							>
+						</p>
+					</div>
 				</div>
 			</div>
 		</footer>
 
-		<script type="text/javascript">
-			document.addEventListener('DOMContentLoaded', function () {
-				var elems = document.querySelectorAll('.sidenav')
-				var instances = M.Sidenav.init(elems, {})
-			})
+		<!-- Bootstrap Bundle with Popper -->
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
+			crossorigin="anonymous"
+		></script>
 
+		<script type="text/javascript">
 			const date = new Date()
 			const year = date.getFullYear()
 
